Minor hange to text

--- a/templates/views/game.jade
+++ b/templates/views/game.jade
@@ -1,7 +1,7 @@
 extends ../layouts/default
 
 block head
-    meta(property="og:title"        content="South Florida Events")
+    meta(property="og:title"        content=locals.league.title + ' ' + 'Matchup: ' + teams[0].name  + " vs " + teams[1].name)
     meta(property="og:url"          content="https://www.sflultimate.com/game/" + game._id)
     if preview
         meta(property="og:description"  content="Game Preview: " + teams[0].name  + " vs " + teams[1].name + " - " + game.scheduledTime.toLocaleDateString('en-US', {month: 'long', weekday: 'long', day: 'numeric'}))
