--- a/public/styles/beach-bash-tournament.css
+++ b/public/styles/beach-bash-tournament.css
@@ -9,6 +9,9 @@
         left: 0;
         width: 100%; } }
 
+.free-agent-btn {
+  margin-left: 1em; }
+
 .site-header {
   display: none; }
 
@@ -36,6 +39,10 @@
 .btn-primary, .credits {
   background-color: #90c4cf;
   border-color: #1c515d; }
+
+.btn-primary:hover {
+  background-color: #2f5962;
+  border-color: #0c2b33; }
 
 .site-footer a {
   color: #1c515d; }
