--- a/public/styles/beach-bash-tournament.scss
+++ b/public/styles/beach-bash-tournament.scss
@@ -11,6 +11,10 @@
   }
 }
 
+.free-agent-btn {
+  margin-left: 1em;
+}
+
 .site-header {
   display: none;
 }
@@ -48,6 +52,11 @@
 .btn-primary, .credits {
   background-color: #90c4cf;
   border-color: #1c515d;
+}
+
+.btn-primary:hover {
+  background-color: #2f5962;
+  border-color: #0c2b33;
 }
 
 .site-footer {
