--- a/templates/views/beach-bash-tournament.jade
+++ b/templates/views/beach-bash-tournament.jade
@@ -14,15 +14,16 @@ block content
         br
         .jumbotron.text-center
             img(src="/images/beach-bash-logo.png")
-            p.tagline Come down to sunny Ft. Lauderdale for our beach ultimate championship on December 16 & 17th!
+            p.tagline Come down to sunny Ft. Lauderdale for our beach ultimate championship on <strong>December 16 & 17th</strong>!
             p
                 a.btn.btn-primary.btn-lg(target="_blank" href="https://docs.google.com/forms/d/e/1FAIpQLSffQliLEhIRV28WWFQM3A0HCaQ2XcWjPiJ5a98h5jlRdU8XFQ/viewform") Submit a Bid
+                a.btn.btn-primary.btn-lg.free-agent-btn(target="_blank" href="https://docs.google.com/forms/d/e/1FAIpQLSdUOlXM7J7iG102OCFgXAyvz2MYW5qNgJt8r65nyUqgOu7fkg/viewform?usp=sf_link") Free Agent Sign Up
     div.beach-bash-content-container.container-fluid
         .row
             .col-md-2.col-md-offset-1
                 h2 Tournament Overview
             .col-md-8
-                h3 Time soak some sun in Florida
+                h3 Time to soak some sun in Florida
                 p Welcome to the Beach Bash Ultimate Tournament. Florida’s newest and highest level beach ultimate frisbee tournament.
                 p We are playing in the heart of the pristine Ft Lauderdale Beach the weekend of December 16-17, 2023. The format is 4v4 USA Ultimate rules with a 2:2 gender ratio. We will have lined fields for a guaranteed 4 games of Saturday pool play and at least 3 games of Sunday bracket play.
                 p Cost is $400 per 10 person team (~$40 per player). Up to 4 additional players can be added for $40 per player with a maximum 14 players.
