Updated description for skill level

--- a/templates/views/register.jade
+++ b/templates/views/register.jade
@@ -88,7 +88,7 @@ block content
                             option(value='7') 7 - Tourney experience. Several years of club
                             option(value='8') 8 - Club level, solid all around, not prone to errors
                             option(value='9') 9 - Rock star. spot on throws, awesome D
-                    p.help-block Please express this accurately as it helps captains balance skill-level across teams. 
+                    p.help-block Consider throwing accuracy, defensive abilities, agility and game awareness when choosing a skill level. <strong>Please choose HONESTLY</strong> as this helps captains to accurately draft a balanced team. 
                     
                 .form-group
                     label(for="participation") Expected Attendance
