--- a/templates/views/register.jade
+++ b/templates/views/register.jade
@@ -167,7 +167,7 @@ block content
                 .checkbox
                     label
                         input#codeOfConduct3(type='checkbox' required)
-                        | I will improve my skills in a safe and supportive environment.
+                        | I will improve my skills in a safe and supportive environment, including avoiding dangerous plays.
                 .checkbox
                     label
                         input#codeOfConduct4(type='checkbox' required)
