--- a/templates/views/board.jade
+++ b/templates/views/board.jade
@@ -15,8 +15,12 @@ block content
                 .row
                     .col-sm-12
                         h2=position.title
-                        p
-                            strong="Currently held by " + position.assigned.map(p => [p.name.first, p.name.last].join(' ')).join(' & ')
+                        if position.assigned.length > 0
+                            p
+                                strong="Currently held by " + position.assigned.map(p => [p.name.first, p.name.last].join(' ')).join(' & ')
+                        else
+                            p
+                                strong="Available for application"
                         p=position.description
                         ul.list-inline
                             for link in position.links
@@ -24,13 +28,14 @@ block content
                                     a(href=link.url target="_blank")=link.label
         hr
         h2.text-center Our Team
-        .row
-            for member in boardMembers
-                if member.active
-                    .col-sm-4
+        for member in boardMembers
+            if member.active
+                .row(style="margin-bottom: 1em")
+                    .col-md-4
                         if member.image
                             img(src=member.image.url class='img-responsive img-rounded' style='margin: 0 auto;')
-                        h4.text-center=member.name.first + " " + member.name.last
+                    .col-md-8
+                        h3.text-left=member.name.first + " " + member.name.last
                         p
                             strong=member.category
                         p=member.description
