--- a/templates/views/club-teams.jade
+++ b/templates/views/club-teams.jade
@@ -14,9 +14,10 @@ block content
             if team.active
                 .row
                     .col-sm-3.text-center
-                        img(src=team.image class='img-responsive' style='margin: 0 auto;')
+                        if team.image
+                            img(src=team.image.url class='img-responsive' style='margin: 0 auto;')
                     .col-sm-9
-                        h2=team.title
+                        h2=team.name
                         p
                             strong=team.category
                         p=team.description
