--- a/templates/views/events.jade
+++ b/templates/views/events.jade
@@ -8,7 +8,7 @@ block head
 block content
     .container
         h1 Calendar        
-        iframe(src="https://docs.google.com/spreadsheets/d/e/2PACX-1vS1QbLcE0hE72nw--gBLaNKwIYX3P8YZr9w8TMz2yqL62qIkXxxoRcmNXLT_whp5mg_oVfV5dwV23mh/pubhtml?widget=true&amp;headers=false", width='100%', frameBorder="0",  style='height: 980px;')
+        iframe(src="https://docs.google.com/spreadsheets/d/e/2PACX-1vS1QbLcE0hE72nw--gBLaNKwIYX3P8YZr9w8TMz2yqL62qIkXxxoRcmNXLT_whp5mg_oVfV5dwV23mh/pubhtml?widget=true&amp;headers=false#gid=1961170570", width='100%', frameBorder="0",  style='height: 980px;')
         
         h1 Upcoming Events
         p.lead Below you will find our list upcoming events.
@@ -29,13 +29,14 @@ block content
 
         hr
         h1 Past Events
+        p.lead Here you can find our list of past events.
         for event in events
             if !event.active
                 .row.text-muted
                     .col-sm-12
-                      h3=event.title
+                      h3=event.name
                   p
-                      strong=event.start_time_formatted
+                      strong=event.startTimeFormatted
                         |  <br/><em>#{event.location}</em>
                         |  •  #{event.category}
                   p=event.description
