--- a/templates/views/events.jade
+++ b/templates/views/events.jade
@@ -15,7 +15,10 @@ block content
         for event in events
             if event.active
                 .row
-                    .col-sm-12
+                    .col-sm-3
+                        a(href=event.image.url target="_blank")
+                            img.img-responsive(src=event.image.url)
+                    .col-sm-9
                         h2=event.name
                         p
                             strong=event.startTimeFormatted
@@ -33,16 +36,19 @@ block content
         for event in events
             if !event.active
                 .row.text-muted
-                    .col-sm-12
-                      h3=event.name
-                  p
-                      strong=event.startTimeFormatted
-                        |  <br/><em>#{event.location}</em>
-                        |  •  #{event.category}
-                  p=event.description
-                  ul.list-inline
-                      for link in event.links
-                        li
-                          a.btn.btn-default(href=link.url target="_blank")=link.label
+                    .col-sm-3
+                        a(href=event.image.url target="_blank")
+                            img.img-responsive(src=event.image.url)
+                    .col-sm-9
+                        h3=event.name
+                        p
+                            strong=event.startTimeFormatted
+                            |  <br/><em>#{event.location}</em>
+                            |  •  #{event.category}
+                        p=event.description
+                        ul.list-inline
+                            for link in event.links
+                                li
+                                    a.btn.btn-default(href=link.url target="_blank")=link.label
                 hr
                 
